# Technical-Assessment

DataPipeline/phoenix-pipeline/: .env.example  README.md  test_coingecko.py  test_coingecko_logic.py  test_transform_enrich.py
DataPipeline/phoenix-pipeline/src/phoenix_pipeline/: __main__.py  coingecko.py  config.py  io.py  main.py  subgraph.py  transform.py
DataPipeline/phoenix-pipeline/tests/: __init__.py  test_config.py  test_io.py
Frontend/dashboard/: README.md
Frontend/dashboard/app/: layout.tsx  page.tsx
Frontend/dashboard/components/: AgentTable.tsx  ConnectionBadge.tsx  ErrorBoundary.tsx
Frontend/dashboard/lib/: .store.ts.swp  connectionManager.ts  hyperliquid.ts  math.ts  store.ts  websocket.ts
Frontend/dashboard/tests/: math.test.ts
Frontend/phoenix-dashboard/.next/server/: server-reference-manifest.json
part3-backend-or-pipeline/: PROMPTS.md
part3-backend-or-pipeline/phoenix-pipeline/: .env.example  .gitignore  DEMO_GUIDE.md  DEMO_QUICK_REFERENCE.md  DESIGN_DECISIONS.md  Makefile  README.md  demo_with_mock_data.py  generate_demo_output.py  pyproject.toml  test_io.py  test_main.py
part3-backend-or-pipeline/phoenix-pipeline/examples/: fetch_swaps_example.py
part3-backend-or-pipeline/phoenix-pipeline/src/phoenix_pipeline/: __init__.py  config.py
part3-backend-or-pipeline/phoenix-pipeline/tests/: conftest.py  test_pipeline_integration.py  test_transform.py
part3-frontend/dashboard/: README.md  package-lock.json  package.json
part3-frontend/dashboard/components/: ConnectionBadge.tsx  MarketTicker.tsx
part3-frontend/dashboard/lib/: math.ts
part3-frontend/dashboard/tests/: MarketTicker.test.tsx
